--- a/src/app/tester/tester.component.html
+++ b/src/app/tester/tester.component.html
@@ -2,10 +2,10 @@
   <div class="row">
     <div class="card-body">
       <ul>
-        <li>{{ passInfo.userId }}</li>
-        <li>{{ passInfo.id }}</li>
-        <li>{{ passInfo.title }}</li>
-        <li>{{ passInfo.completed }}</li>
+        <li>{{ information.userId }}</li>
+        <li>{{ information.id }}</li>
+        <li>{{ information.title }}</li>
+        <li>{{ information.completed }}</li>
       </ul>
     </div>
   </div>
